added block head title to all htmls

--- a/blog/templates/blog/blog_confirm_delete.html
+++ b/blog/templates/blog/blog_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-
+{% block head_title %} - Blog | Delete {% endblock head_title %}
 {% block content %}
 
 <div id="about-pic">
