--- a/blog/templates/blog/blog_form.html
+++ b/blog/templates/blog/blog_form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% include "static" %}
-
+{% block head_title %} - Blog | {{ view_type|title }} {% endblock head_title %}
 {% block content %}
 <div class="blog-pic">
     <div class="container ">
