--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-
+{% block head_title %} - Fitness {% endblock head_title %}
 {% block content %}
 
 <section id="section1">
@@ -62,7 +62,7 @@
 <section id="section2">
     <div class="feature-container card-group">
         <div class="card">
-            <img src="{% static 'images/bidman.jpg' %}" class="card-img-top" alt="..." />
+            <img src="{% static 'images/bidman.jpg' %}" class="card-img-top" alt="BodyBuilder" />
             <div class="card-body">
                 <h3 class="card-title aw text-center">Programs</h3>
                 {% for program in programs %}
@@ -80,10 +80,10 @@
                     members experances or blog about your own.
                 </p>
             </div>
-            <img src="{% static 'images/sven-mieke.jpg' %}" class="card-img-top" alt="..." />
+            <img src="{% static 'images/sven-mieke.jpg' %}" class="card-img-top" alt="Lady in gym" />
         </div>
         <div class="card">
-            <img src="{% static 'images/pool-man.jpg' %}" class="card-img-top" alt="..." />
+            <img src="{% static 'images/pool-man.jpg' %}" class="card-img-top" alt="Thin man in pool" />
             <div class="card-body">
                 <h3 class="card-title text-center aw">Focus Shop</h3>
                 <a class="card-text d-block text-center mont_b text-bk"
@@ -100,7 +100,7 @@
     <div {% if current_membership == "Professional" %} hidden {% else %}{% endif %} class="card my-5 py-5">
         <div class="row no-gutters align-items-center">
             <div class="col-md-4 mx-auto" style="max-width: 300px;">
-                <img src="{% static 'images/womenblog-crop.jpg' %}" class="card-img bs-2" alt="...">
+                <img src="{% static 'images/womenblog-crop.jpg' %}" class="card-img bs-2" alt="Women in gym">
             </div>
 
             <div class="col-md-8">
@@ -185,15 +185,16 @@
                                     <h5 class="text-center text-wht mr-2">{{ blog.title|title }}</h5><br>
                                     <a href="{{ blog.get_absolute_url }}"><i
                                             class="mr-2 text-wht fad fa-tags"></i><small
-                                            class="text-muted">{{ blog.category }}</small></a>
+                                            class="text-muted">{{ blog.category }}</small>
+                                    </a>
                                 </div>
                             </a>
                             <div class="row justify-content-center">
-                                <div class="text-center col-md-2"><span><i class="text-grn fad fa-eye"></i>
+                                <div class="text-center col-2"><span><i class="text-grn fad fa-eye"></i>
                                         {{ blog.get_view_count }}</span></div>
-                                <div class="text-center col-md-2"><span><i class="text-primary fad fa-thumbs-up"></i>
+                                <div class="text-center col-2"><span><i class="text-primary fad fa-thumbs-up"></i>
                                         {{ blog.get_like_count }}</span><br></div>
-                                <div class="text-center col-md-2"><span><i class="text-ylw fad fa-comments-alt"></i>
+                                <div class="text-center col-2"><span><i class="text-ylw fad fa-comments-alt"></i>
                                         {{ blog.get_comment_count }}</span></div>
                             </div>
 
@@ -211,12 +212,6 @@
                     </a>
                 </div>
             </div>
-
-
-
-
-
-
         </div>
         <div class="spaces-2"></div>
     </div>
