--- a/home/templates/home/terms.html
+++ b/home/templates/home/terms.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-
+{% block head_title %} - Terms and Conditions {% endblock head_title %}
 {% block content %}
 <div class="blog-image">
     <div class="container ">
@@ -16,9 +16,9 @@
     <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
-                <h1 class="text-wht aw text-center">TERMS AND CONDITIONS</h1>
+                <h1 class="text-warning aw text-center">Terms and Conditions</h1>
                 <div class="text-wht">
-                    <p>Last updated: 2020-09-01</p>
+
                     <p>1. <b>Introduction</b></p>
                     <p>Welcome to <b>Focus Fitness</b> (“Company”, “we”, “our”, “us”)!</p>
                     <p>These Terms of Service (“Terms”, “Terms of Service”) govern your use of our website located at
@@ -329,7 +329,7 @@
                             href="https://policymaker.io/terms-and-conditions/">Terms of Service</a> were created for
                         <b>https://focus-fitness.herokuapp.com/</b> by <a
                             href="https://policymaker.io">PolicyMaker.io</a> on 2020-09-01.</p>
-
+                    <p>Last updated: 2020-09-01</p>
                 </div>
             </div>
 
