--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
-{% block content %}
 
+{% block head_title %} - Shop {% endblock head_title %}
+
+{% block content %}
 
 <div class="container-shop ">
     <div class="container-fluid  blog-image">
