--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 {% load static %}
-
+{% block head_title %} - Admin {% endblock head_title %}
 {% block branding %}
 <h1 id="head">
     <img src="{% static 'images/logo.png' %}" class="brand_img" alt="Focus Fitness" height="50" width="100"> Focus Admin
