--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -3,7 +3,7 @@
 <div class=" container-fluid footer-image">
     <div class="row align-items-center">
         <div class="col-3 d-none d-md-block ">
-            <img class="ml-3" src="{% static 'images/logo.png' %}" alt="">
+            <img class="ml-3" src="{% static 'images/logo.png' %}" alt="FocusFitness">
         </div>
         <div class="col-md-6 col-sm-9 col-12 pt-3">
             <p class="text-wht text-center">Be the First to recieve exciting news, Features, and special
@@ -29,13 +29,13 @@
             <div class="col-12 ">
                 <div class="social text-center">
                     <a class="mx-3" href="https://twitter.com/" target="_blank">
-                        <img src="https://img.icons8.com/color/36/000000/twitter.png" /></a>
+                        <img src="https://img.icons8.com/color/36/000000/twitter.png" alt="Twitter" /></a>
 
                     <a class="mx-3" href="https://www.instagram.com/" target="_blank">
-                        <img src="https://img.icons8.com/fluent/36/000000/instagram-new.png" />
+                        <img src="https://img.icons8.com/fluent/36/000000/instagram-new.png" alt="Instagram" />
                     </a>
                     <a class="mx-3" href="https://www.facebook.com/" target="_blank">
-                        <img src="https://img.icons8.com/color/36/000000/facebook-new.png" />
+                        <img src="https://img.icons8.com/color/36/000000/facebook-new.png" alt="Facebook" />
 
                     </a>
                 </div>
@@ -52,21 +52,22 @@
                     </small>
                 </p>
             </div>
+
             <div class="text-center">
                 <div class="col-12 d-inline mt-2">
-                    <a href="{% url 'terms' %}" target="_blank" "><small class=" text-off-wht mx-auto text-center">Terms
-                        of
-                        Service</small>
+                    <a href="{% url 'terms' %}" target="_blank"><small class=" text-off-wht mx-auto text-center">
+                            Terms of Service</small>
 
                     </a>
                 </div>
                 <div class="col-12 d-inline mt-2">
-                    <a href="{% url 'privacy' %}" target="_blank" "><small class=" text-off-wht mx-auto
-                        text-center">Privacy</small>
+                    <a href="{% url 'privacy' %}" target="_blank">
+                        <small class=" text-off-wht mx-auto text-center">Privacy</small>
                     </a>
                 </div>
                 <div class="col-12 d-inline mt-2">
-                    <a target="_blank" "><small class=" text-off-wht mx-auto text-center">CopyRight © 2020</small>
+                    <a href="https://en.wikipedia.org/wiki/Copyright" target="_blank"><small class=" text-off-wht
+                        mx-auto text-center">CopyRight © 2020</small>
                     </a>
                 </div>
             </div>
