--- a/templates/programs/program_list.html
+++ b/templates/programs/program_list.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head_title %} - Programs {% endblock head_title %}
 
 {% block content %}
 
