--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
 {% load bag_tools %}
-
 {% load static %}
-{% block extra_css %}
-<!-- <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}"> -->
-{% endblock %}
 
+{% block head_title %} - Checkout {% endblock head_title %}
 
 {% block content %}
 
