--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -2,10 +2,8 @@
 
 
 {% load static %}
-{% block extra_css %}
 
-{% endblock %}
-
+{% block head_title %} - Checkout | Details {% endblock head_title %}
 
 {% block content %}
 
