--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head_title %} - About {% endblock head_title %}
 
 {% block content %}
 <div id="about-pic">
