--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-
+{% block head_title %} - Contact Us {% endblock head_title %}
 {% block content %}
 
 <div id="about-pic">
