--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head_title %} - Privacy Policy {% endblock head_title %}
 
 {% block content %}
 <div class="blog-image">
@@ -16,12 +17,12 @@
     <div class="container center-block">
         <div class="overlay">
             <div class="col p-4">
-                <h1 class="text-wht aw text-center">Privacy Policy</h1>
+                <h1 class="text-success aw text-center">Privacy Policy</h1>
                 <div class="text-wht">
 
-                    <p>Effective date: 2020-09-01</p>
-                    <p>1. <b>Introduction</b></p>
+
                     <p>Welcome to <b> Focus Fitness</b>.</p>
+                    <p>1. <b>Introduction</b></p>
                     <p><b>Focus Fitness</b> (“us”, “we”, or “our”) operates <b>https://focus-fitness.herokuapp.com</b>
                         (hereinafter referred to as <b>“Service”</b>).</p>
                     <p>Our Privacy Policy governs your visit to <b>https://focus-fitness.herokuapp.com</b>, and explains
@@ -313,7 +314,7 @@
                             href="https://policymaker.io/privacy-policy/">Privacy Policy</a> was created for
                         <b>https://focus-fitness.herokuapp.com</b> by <a
                             href="https://policymaker.io">PolicyMaker.io</a> on 2020-09-01.</p>
-
+                    <p>Effective date: 2020-09-01</p>
                 </div>
             </div>
 
