--- a/profiles/templates/profiles/cancel_sub_confirm.html
+++ b/profiles/templates/profiles/cancel_sub_confirm.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head_title %} - Cancel Subscription {% endblock head_title %}
 
 {% block content %}
 <div id="about-pic">
