--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head_title %} - {{ user.username|title }} | Dashboard {% endblock head_title %}
 
 {% block content %}
 <div id="profile-pic">
@@ -27,21 +28,24 @@
                     <div class="profile-overlay">
                         <ul>
                             <li class="pt-2">
-                                <img src="https://img.icons8.com/office/32/000000/re-enter-pincode.png" />
-                                <a class="aw text-wht text-center mr-1" href="{% url 'account_reset_password' %}">
+                                <img src="https://img.icons8.com/office/32/000000/re-enter-pincode.png"
+                                    alt="Reset Password" />
+                                <a class="aw text-wht text-center mx-2" href="{% url 'account_reset_password' %}">
                                     Update Password
                                 </a>
                             </li>
                             <li class="pt-2">
-                                <img src="https://img.icons8.com/fluent/32/000000/map-marker.png" />
-                                <a class="aw text-wht text-center mr-1" href="{% url 'profile_details' %}">
+                                <img src="https://img.icons8.com/fluent/32/000000/map-marker.png"
+                                    alt="Shipping Setails" />
+                                <a class="aw text-wht text-center mx-2" href="{% url 'profile_details' %}">
                                     Shipping Details
                                 </a>
                             </li>
                             <li class="pt-2">
-                                <img src="https://img.icons8.com/dusk/32/000000/membership-card.png" />
+                                <img src="https://img.icons8.com/dusk/32/000000/membership-card.png"
+                                    alt="Subscriptions" />
 
-                                <a class="aw text-wht mr-1" href="{% url 'profile_subscriptions' %}">
+                                <a class="aw text-wht mx-2" href="{% url 'profile_subscriptions' %}">
                                     Subscription: {{ user_membership.membership.membership_type }}
                                 </a>
 
@@ -88,7 +92,7 @@
                             <p class="aw text-wht">You hanv't writen any blogs yet</p>
 
                             <p class="text-wht">
-                                You blog can be on anything gym related, It doesnt have to be on giving others admice,
+                                A blog can be on anything gym related, It does'nt have to be on giving others admice,
                                 It can be on your experience or how you find a product or if you are looking for advice.
                                 Our Pro Trainer and Bloggers are always reading members blog to see if they can help or
                                 give advice. Use catogery Members.<br>
