--- a/profiles/templates/profiles/profile_subscriptions.html
+++ b/profiles/templates/profiles/profile_subscriptions.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head_title %} - {{ user.username|title }} | Subscriptions {% endblock head_title %}
 
 {% block content %}
 
