--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
 <head>
 
-    <title>{% block head_title %}{% endblock %}</title>
+    <title>Focus {% block head_title %}{% endblock %}</title>
     {% block extra_head %}
     {% endblock %}
 
@@ -28,7 +28,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/checkout.css' %}" />
-
     {% endblock core_css %}
 
 
@@ -77,7 +76,6 @@
         {% else %}
         {% include 'includes/toasts/toast_info.html' %}
         {% endif %}
-
         {% endwith %}
         {% endfor %}
     </div>
@@ -85,6 +83,7 @@
 
     {% block content %}
     {% endblock content %}
+    <!--footer-->
     {% include "base_partials/footer.html" %}
 
 
@@ -93,7 +92,6 @@
         $('.toast').toast('show');
     </script>
     {% endblock postloadjs %}
-    <!--footer-->
 
 </body>
 
