--- a/templates/base_partials/_navbar.html
+++ b/templates/base_partials/_navbar.html
@@ -10,13 +10,12 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <a href="{% url 'home' %}" class="nav-link main-logo-link">
-        <img id="design2" src="{% static 'images/logo.png' %}" alt="" />
+        <img id="design2" src="{% static 'images/logo.png' %}" alt="Logo" />
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="justify-content-center collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="aw navbar-nav  mx-3">
             {% if request.user.is_authenticated %}
@@ -43,10 +42,6 @@
             <li class="nav-item ">
                 <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
             </li>
-
-
-
-
         </ul>
 
     </div>
