--- a/templates/base_partials/_up.html
+++ b/templates/base_partials/_up.html
@@ -1,6 +1,6 @@
 <div class="btt-button shadow-sm ">
     <a class="btt-link d-flex bg-black rounded">
 
-        <img class="mx-auto my-auto" src="https://img.icons8.com/emoji/40/000000/top-arrow-emoj.png" />
+        <img class="mx-auto my-auto" src="https://img.icons8.com/emoji/40/000000/top-arrow-emoj.png" alt="Up Arrow" />
     </a>
 </div>
