--- a/templates/programs/program_detail.html
+++ b/templates/programs/program_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block head_title %} - Programs | {{ object.title }} {% endblock head_title %}
 
 {% block content %}
 
