--- a/templates/socialaccount/authentication_error.html
+++ b/templates/socialaccount/authentication_error.html
@@ -5,7 +5,15 @@
 {% block head_title %}{% trans "Social Network Login Failure" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Social Network Login Failure" %}</h1>
+<div class="reg-pic ">
+    <div class="container center-block">
+        <div class="overlay">
+            <div class="col p-4">
+                <h1>{% trans "Social Network Login Failure" %}</h1>
 
-<p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+                <p>{% trans "An error occurred while attempting to login via your social network account." %}</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
