--- a/programs/templates/programs/program_list.html
+++ b/programs/templates/programs/program_list.html
@@ -31,7 +31,7 @@
                 <div class="col-md-7 d-flex align-items-center text-wht">
                     <a href="{{ program.get_absolute_url }}">
                         <h5 class="text-center aw card-title text-wht">{{ program.title }}</h5>
-                        <p class="text-center card-text text-wht">{{program.description|truncatechars:50 }}</p>
+                        <p class="text-center card-text text-wht">{{program.description|safe|truncatechars:50 }}</p>
                     </a>
                 </div>
                 <div class="col-md-5 d-none d-md-block ">
@@ -49,7 +49,7 @@
                 <div class="col-md-7 d-flex align-items-center">
                     <a href="{{program.get_absolute_url }}">
                         <h5 class="text-center aw card-title text-wht">{{program }}</h5>
-                        <p class="text-center card-text text-wht">{{program.description|truncatechars:50 }}</p>
+                        <p class="text-center card-text text-wht">{{program.description|safe|truncatechars:50 }}</p>
                     </a>
                 </div>
             </div>
