--- a/blog/templates/blog/blog_categories.html
+++ b/blog/templates/blog/blog_categories.html
@@ -18,11 +18,11 @@
             <a href="{{ blog.get_absolute_url }}">
                 <div class="card mb-3" style="max-width: 830px;">
                     <div class="row no-gutters">
-                        <div class="col-md-4">
+                        <div class="col-md-4 bg-black">
                             <img src="{{ blog.thumbnail.url }}" class="card-img" alt="...">
                         </div>
-                        <div class="col-md-8">
-                            <div class="card-body bg-black-a">
+                        <div class="col-md-8 bg-black">
+                            <div class="card-body bg-black">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                                 <span class="text-mute float-right"><small class="text-muted"> Posted:
