added securty to admin and show development or live in admin

--- a/templates/base_partials/_mini_cart.html
+++ b/templates/base_partials/_mini_cart.html
@@ -8,7 +8,7 @@
 
                 {% if request.user.is_authenticated %}
                 {% if request.user.is_staff %}
-                <a href="/admin/">
+                <a href="/secret-focus-admin/">
                     <span class="aw text-wht" title="Admin Login"><i class="fad fa-sign-in-alt"></i>
                         <i class="fad fa-user-cog mr-4"></i>
                     </span>
