--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,12 +1,26 @@
-{% extends "admin/base.html" %}
+{% extends "admin/base_site.html" %}
 {% load static %}
-{% block head_title %} - Admin {% endblock head_title %}
 {% block branding %}
 <h1 id="head">
-    <img src="{% static 'images/logo.png' %}" class="brand_img" alt="Focus Fitness" height="50" width="100"> Focus Admin
+    <img src="{% static 'images/logo.png' %}" class="brand_img" alt="Focus Fitness" height="50" width="100">
+
 </h1>
 <link rel="stylesheet" href="{% static 'css/admin.css' %}">
 {% endblock %}
 
-{% block extrastyling %}
-{% endblock extrastyling %}
+{% block extrastyle %}
+<style type="text/css">
+    body::before {
+        display: block;
+        line-height: 35px;
+        text-align: center;
+        font-family: "audiowide", sans-serif;
+        text-transform: uppercase;
+        color: rgb(255, 255, 255);
+        background-color: rgba(0, 0, 0, 0.548);
+        content: "{{ ENVIRONMENT_NAME }}";
+
+    }
+</style>
+
+{% endblock extrastyle %}
