--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -7,6 +7,17 @@
 }
 
 
+body::before {
+    display: block;
+    line-height: 35px;
+    text-align: center;
+    font-family: "audiowide", sans-serif;
+    text-transform: uppercase;
+    color: rgb(255, 255, 255);
+    background-color: rgba(0, 0, 0, 0.897);
+
+
+}
 
 #branding h1 {
     padding: 0;
