added title to html and new redirest to special offers

--- a/cart/templates/cart/includes/product-image.html
+++ b/cart/templates/cart/includes/product-image.html
@@ -1,1 +1,2 @@
-<img class="img-fluid cart-img-size" src="{{ item.product.image.url }}" alt="">
+<img class="img-fluid cart-img-size" src="{{ item.product.image.url }}" title="{{ item.product.name }}"
+    alt="{{ item.product.name }}">
