--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -129,8 +129,8 @@
         </div>
     </div>
     <!--Special offers-->
-    <div class="container-fluid mt-4">
-        <h2 class="aw active-size text-center">SPECIAL OFFERS</h2>
+    <div id="secialOffers" class="container-fluid mt-4">
+        <h2 class="aw active-size mt-3 text-center">SPECIAL OFFERS</h2>
         <h4 class="aw text-center mb-5">Look your Best. Feel even Better</h4>
     </div>
 
