--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -82,8 +82,7 @@
 
                     <li class="nav-item dropdown center">
                         <a class="logo-font font-weight-bold nav-link text-ylw  mr-3"
-                            href="{% url 'products:products' %}?category=special_offers" id="specials-link"
-                            aria-expanded="false">
+                            href="{% url 'home' %}#secialOffers">
                             Special Offers
                         </a>
                     </li>
