--- a/cart/templates/cart/includes/remove.html
+++ b/cart/templates/cart/includes/remove.html
@@ -1,10 +1,9 @@
 {% load static %}
 <a class="pr-2 btt-link remove-item text-danger hover-shadow" id="remove_{{ item.item_id }}"
-    data-product_size="{{ item.size }}"><img src="https://img.icons8.com/plasticine/32/000000/filled-trash.png" /></a>
-
-<!-- <a href=""><i class=" fad fa-trash-alt text-primary fa-lg"></i></a> -->
-
-
+    data-product_size="{{ item.size }}"
+    title="Delete {% if item.product.has_sizes %}{{ item.product.name }} - {{ item.size|upper  }}{% else %}{{ item.product.name }}{% endif %}">
+    <img src="https://img.icons8.com/plasticine/40/000000/filled-trash.png" />
+</a>
 
 {% block postloadjs %}
 <script>
