--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -38,15 +38,15 @@
                                 <h5 class="text-center text-wht">{{ blog.title|title }}</h5>
                             </div>
                         </a>
-                        <div class="row justify-content-center">
+                        <div class="row w-100 justify-content-center">
                             <a href="{{ blog.get_absolute_url }}"><i class="mx-2 text-wht fad fa-tags"></i><small
                                     class="text-muted">{{ blog.category }}</small>
                             </a>
-                            <div class="text-center col-md-2"><span><i class="text-grn fad fa-eye"></i>
+                            <div class="text-center col-2"><span><i class="text-grn fad fa-eye"></i>
                                     {{ blog.get_view_count }}</span></div>
-                            <div class="text-center col-md-2"><span><i class="text-primary fad fa-thumbs-up"></i>
+                            <div class="text-center col-2"><span><i class="text-primary fad fa-thumbs-up"></i>
                                     {{ blog.get_like_count }}</span><br></div>
-                            <div class="text-center col-md-2"><span><i class="text-ylw fad fa-comments-alt"></i>
+                            <div class="text-center col-2"><span><i class="text-ylw fad fa-comments-alt"></i>
                                     {{ blog.get_comment_count }}</span></div>
                         </div>
                     </div>
@@ -69,6 +69,7 @@
             {% if blog.featured != True %}
             {% if blog.category != 'Members' %}
             {% if not forloop.counter|divisibleby:2  %}
+            <p class="text-wht">{{ request.headers.user_agent }}</p>
             <a href="{{ blog.get_absolute_url }}">
                 <div class="card mb-3" style="max-width: 830px;">
                     <div class="row no-gutters">
@@ -82,7 +83,7 @@
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small>
                                 <span class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
-                                <div class="row justify-content-around">
+                                <div class="row w-100 justify-content-around">
                                     <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
                                             {{ blog.get_view_count }}</span></div>
                                     <div class="text-center text-wht col-2"><span><i
@@ -107,16 +108,17 @@
                         <div class="col-md-8 bg-black">
                             <div class="card-body bg-black">
                                 <h5 class="card-title text-center text-wht">{{ blog.title|title }}</h5>
+                                <small class="text-muted">{{ blog.category }}</small>
                                 <small class="card-text text-wht">{{ blog.content|safe|truncatechars:100 }}</small><span
                                     class="text-mute float-right"><small class="text-muted"> Posted:
                                         {{ blog.publish_date|timesince }}</small></span>
-                                <div class="row justify-content-around">
-                                    <div class="text-center text-wht col-md-2"><span><i class="text-grn fad fa-eye"></i>
+                                <div class="row w-100 justify-content-around">
+                                    <div class="text-center text-wht col-2"><span><i class="text-grn fad fa-eye"></i>
                                             {{ blog.get_view_count }}</span></div>
-                                    <div class="text-center text-wht col-md-2"><span><i
+                                    <div class="text-center text-wht col-2"><span><i
                                                 class="text-primary fad fa-thumbs-up"></i>
                                             {{ blog.get_like_count }}</span><br></div>
-                                    <div class="text-center text-wht col-md-2"><span><i
+                                    <div class="text-center text-wht col-2"><span><i
                                                 class="text-ylw fad fa-comments-alt"></i>
                                             {{ blog.get_comment_count }}</span></div>
                                 </div>
