--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -62,26 +62,36 @@
 <section id="section2">
     <div class="feature-container card-group">
         <div class="card">
-            <img src="{% static 'images/bidman.jpg' %}" class="card-img-top" alt="BodyBuilder" />
-            <div class="card-body">
-                <h3 class="card-title aw text-center">Member Programs</h3>
-                {% for program in programs %}
-                <a class="card-text d-block text-center mont_b text-bk red-hover"
-                    href="{% url 'programs:list' %}">{{ program }}</a>
-                {% endfor %}
-
-            </div>
+            <a href="{% url 'programs:list' %}" class="ripple-surface">
+                <img src="{% static 'images/bidman.jpg' %}" class="card-img-top" alt="BodyBuilder" />
+                <div class="card-body">
+                    <h4 class="card-title text-bk aw text-center">Training Programs</h4>
+                    {% for program in programs %}
+                    <p class="card-text d-block text-center mont_b text-bk red-hover">
+                        {{ program }}</p>
+                    {% endfor %}
+                </div>
+            </a>
         </div>
+        {% if screen_size == True %}
+        <div class="card">
+            <a href="{% url 'blog:list' %}" class="ripple-surface">
+                <img src="{% static 'images/sven-mieke.jpg' %}" class="card-img-top" alt="Lady in gym" />
+                <div class="card-body">
+                    <h3 class="card-title text-center aw">Community Blogs</h3>
+                    {% include "home/includes/community_blog.html" %}
+                </div>
+            </a>
+        </div>
+        {% else %}
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title text-center aw">Community Blogs</h3>
-                <p class="card-text text-center">
-                    A friendly bloging community where you can read about other
-                    members experances or blog about your own.
-                </p>
+                {% include "home/includes/community_blog.html" %}
             </div>
             <img src="{% static 'images/sven-mieke.jpg' %}" class="card-img-top" alt="Lady in gym" />
         </div>
+        {% endif %}
         <div class="card">
             <img src="{% static 'images/pool-man.jpg' %}" class="card-img-top" alt="Thin man in pool" />
             <div class="card-body">
