--- a/home/templates/home/includes/community_blog.html
+++ b/home/templates/home/includes/community_blog.html
@@ -1,4 +1,5 @@
-<p class="card-text text-center">
+<h4 class="card-title text-bk text-center aw">Community Blogs</h4>
+<p class="card-text text-center text-bk">
     A friendly bloging community where you can read blogs from Professional gym bloggers or about other
     Focus Fitnes members experances or blog about your own.
 </p>
