--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,10 @@ p {
 
 }
 
+a {
+  text-decoration: none !important;
+}
+
 ul {
   list-style-type: none;
 }
@@ -59,8 +63,18 @@ img {
   -webkit-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
-  color: rgba(0, 0, 0, 0.75);
+  color: rgba(253, 252, 252, 0.932);
 }
+
+.hover-shadow-col-lit:hover {
+  -webkit-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
+
+}
+
+
+
 
 .fixed-shadow {
   -webkit-box-shadow: 0px 10px 19px -5px rgba(0, 0, 0, 0.75);
@@ -284,37 +298,6 @@ img {
   width: 1.5rem;
 }
 
-.ripple-surface {
-  display: inline-block;
-  position: relative;
-  overflow: hidden;
-}
-
-.ripple-surface span {
-  position: absolute;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.685);
-
-  width: 100px;
-  height: 100px;
-  margin-top: -50px;
-  margin-left: -50px;
-
-  animation: ripple 1500ms;
-  opacity: 0;
-}
-
-@keyframes ripple {
-  from {
-    opacity: 1;
-    transform: scale(0);
-  }
-
-  to {
-    opacity: 0;
-    transform: scale(10);
-  }
-}
 
 
 #cart {
