made background fix neetly to reat of html

--- a/programs/templates/programs/program_list.html
+++ b/programs/templates/programs/program_list.html
@@ -17,10 +17,9 @@
         </div>
     </div>
     <div class="container profile">
-        <div class="profile-overlay">
-            <div class="col p-4">
+        <div class="profile-overlay w-75 mx-auto">
+            <div class="col p-4 ">
                 <h4 class="text-wht aw display-4 text-center">Programs</h4>
-
             </div>
         </div>
         <div class="container center-block-col pb-4">
